--- a/src/style.css
+++ b/src/style.css
@@ -82,14 +82,49 @@
 .header-title-link .logo-img {
     width: 50px;
     height: 50px;
-    padding-right: 8px;
+   padding-right: 8px;
 }
 
 .header-title-link .header-title-name {
+    position: relative;
     font-weight: 700;
     font-size: 50px;
     color: #606db8;
 }
+
+.header-title-link .header-title-name:hover span {
+    opacity: 1;
+    top: -24px;
+}
+
+.header-title-link .header-title-name span {
+    position: absolute;
+    left: 50%;
+    top: -40px;
+    font-size: 12px;
+    width: 100px;
+    color: #fff;
+    transform: translateX(-50%);
+    line-height: 1.6;
+    background: #606db8;
+    padding: 3px 9px;
+    border-radius: 6px 0px;
+    font-weight: 400;
+    opacity: 0;
+    transition: all 0.3s ease;
+}
+.header-title-link .header-title-name span:before {
+    content: '';
+    position: absolute;
+    left: 50%;
+    bottom: -5px;
+    border-top: 5px solid #606db8;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    margin-left: -4px;
+}
+    
+
 
 .header-title-search {
     display: flex;
@@ -156,7 +191,7 @@
     width: 950px;
     height: 400px;
     margin: 24px 0;
-    border-radius: 4px;
+    border-radius: 18px;
     z-index: 1;
 }
 .swiper-slide.fst {
