fix: media query setted (max-width: 760px)

--- a/src/style.css
+++ b/src/style.css
@@ -635,3 +635,15 @@
     left: 0;
     top: 2px;
 }
+
+
+/* 미디어 쿼리 */
+
+@media (max-width: 768px) {
+    .container {
+        width: 100%;
+    }
+    .row { 
+        padding: 0 15px;
+    }
+}
